@@ -343,4 +343,7 @@
 	<data name="DataNotInSupportedFormat" xml:space="preserve">    
     <value>The given value was not in a supported format.</value>  
   </data>
+  	<data name="NoServerSSLSupport" xml:space="preserve">
+    <value>The host {0} does not support SSL connections.</value>
+  </data>
 	<resheader name="resmimetype"><value>text/microsoft-resx</value></resheader><resheader name="version"><value>2.0</value></resheader><resheader name="reader"><value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value></resheader><resheader name="writer"><value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value></resheader></root>
